# scala-ls-tests

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  build.sbt  flake.nix
.bsp/: mezel.json
src/main/resources/: BUILD.bazel
