load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")

scala_toolchain(
    name = "toolchain_impl",
    enable_diagnostics_report = True,
    enable_semanticdb = True,
    dependency_mode = "plus-one",
    strict_deps_mode = "error",
    unused_dependency_checker_mode = "error",
    dependency_tracking_method = "ast",
)

toolchain(
    name = "toolchain",
    toolchain = "toolchain_impl",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type"
)
